--- a/admin-lobby/admin-lobby-server/package.json
+++ b/admin-lobby/admin-lobby-server/package.json
@@ -20,7 +20,7 @@
     "kafkajs": "^1.14.0",
     "morgan": "~1.9.1",
     "redis": "^3.0.2",
-    "socket.io": "^2.3.0"
+    "socket.io": ">=2.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
