--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,39 @@ services:
       - 6379:6379
     volumes: 
       - redis_dev:/data
+  admin-lobby-server:
+    build:
+      context: ./projects/admin-lobby-server/
+      dockerfile: ./Dockerfile
+    ports:
+      - 3000:3000
+  customer-lobby-server:
+    build:
+      context: ./projects/customer-lobby-server/
+      dockerfile: ./Dockerfile
+    ports:
+      - 3001:3001
+  admin-lobby-ui:
+    build:
+      context: ./projects
+      dockerfile: ./admin-ui.Dockerfile
+    ports:
+      - 4200:4200
+  customer-lobby-ui:
+    build:
+      context: ./projects
+      dockerfile: ./customer-ui.Dockerfile
+    ports:
+      - 4201:4201
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      #KAFKA_CREATE_TOPICS: "sample:1:1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
