--- a/projects/admin-lobby-server/Dockerfile
+++ b/projects/admin-lobby-server/Dockerfile
@@ -15,6 +15,13 @@ RUN npm install
 # 앱 소스 추가
 COPY . .
 
+#ENV KAFKA_HOST localhost:9092
+ENV KAFKA_HOST kafka:9092
+ENV UI_APP_NAME admin-lobby-ui
+ENV KAFKA_TO_CUSTOMER_TOPIC to-customer
+ENV KAFKA_TO_ADMIN_TOPIC to-admin
+ENV KAFKA_GROUP chat-admin-group
+
 EXPOSE 3000
 
 CMD [ "npm", "run", "dev" ]
