--- a/projects/admin-lobby-server/Dockerfile
+++ b/projects/admin-lobby-server/Dockerfile
@@ -1,7 +1,17 @@
-FROM node:14
+FROM node:14 AS base
 
 # 앱 디렉터리 생성
 WORKDIR /usr/src/app
+EXPOSE 3000
+
+#ENV KAFKA_HOST localhost:9092
+ENV KAFKA_HOST kafka:9092
+ENV UI_APP_NAME admin-lobby-ui
+ENV KAFKA_TO_CUSTOMER_TOPIC to-customer
+ENV KAFKA_TO_ADMIN_TOPIC to-admin
+ENV KAFKA_GROUP chat-admin-group
+
+FROM base AS dev
 
 # 앱 의존성 설치
 # 가능한 경우(npm@5+) package.json과 package-lock.json을 모두 복사하기 위해
@@ -12,16 +22,11 @@ RUN npm install
 # 프로덕션을 위한 코드를 빌드하는 경우
 # RUN npm ci --only=production
 
+FROM base AS prod
+
 # 앱 소스 추가
 COPY . .
 
-#ENV KAFKA_HOST localhost:9092
-ENV KAFKA_HOST kafka:9092
-ENV UI_APP_NAME admin-lobby-ui
-ENV KAFKA_TO_CUSTOMER_TOPIC to-customer
-ENV KAFKA_TO_ADMIN_TOPIC to-admin
-ENV KAFKA_GROUP chat-admin-group
+RUN npm ci --only=production
 
-EXPOSE 3000
-
-CMD [ "npm", "run", "dev" ]
+# CMD [ "npm", "run", "dev" ]
