--- a/projects/customer-lobby-server/package.json
+++ b/projects/customer-lobby-server/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start_": "node ./bin/www",
-    "front": "cd ../customer-lobby-ui && ng serve --port 4201",
-    "start": "nodemon ./src/bin/www --exec babel-node --preset @babel/preset-env",
+    "clean": "rm -rf dist && mkdir dist",
+    "build": "npm run clean && babel src -d dist",
+    "start": "node ./dist/bin/www.js",
     "dev": "nodemon ./src/bin/www --exec babel-node --preset @babel/preset-env"
   },
   "dependencies": {
