--- a/projects/customer-lobby-ui/package.json
+++ b/projects/customer-lobby-ui/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4201",
     "build": "ng build",
+    "build-staging": "ng build --configuration=staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
