--- a/projects/admin-lobby-ui/package.json
+++ b/projects/admin-lobby-ui/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
-    "build-staging": "ng build --configuration=staging",
+    "build-staging": "ng build --baseHref=/admin/ --configuration=staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
